--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Title of your blog; shows in the header
-name: "cheerlabs"
+name: "CheerLabs"
 
 # Description of your content (will only be used on Google Search)
-description: "Fluid, responsive blog theme for Jekyll"
+description: "CheerLabs blog"
 
 # Your name. Will show in your footer + sidebar 
 author: "John Doge"
 
-url: "http://cheerlabs.com"
-baseurl: "/blog/"
+#url: "http://cheerlabs.com"
+baseurl: "/blog"
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
 author-bio: "I'm a dog. I develop things. This is my blog so why don't you close this damn side panel (cursed by most UX Designers but I don't care, I do whatever I want) and start reading my awesome stuff?"
